test/cases/parser/WrongImport2.errors
WrongImport2.b:4:18: Syntax error (expected module name)
